--- a/exercises/TD2_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD2_structures_controle/02_structures_controle.ipynb
@@ -200,17 +200,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "moyenne: 5.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Combien de nombres voulez-vous saisir ?\"))\n",
+    "somme = 0\n",
+    "for i in range(n) :\n",
+    "    a = int(input(\"Saisir un nombre\"))\n",
+    "    somme += a\n",
+    "print (\"moyenne:\" , somme/n)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-c0b4293d908e>, line 3)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-c0b4293d908e>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    while (a != -1)\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    " somme = 0\n",
+    " n = 0\n",
+    " while (a != -1)  \n",
+    "    a = float(input(\"Saisir un nombre\"))\n",
+    "    if a=! -1\n",
+    "        somme += a\n",
+    "        n += 1\n",
+    "if n != 0:\n",
+    "    print\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "source": [
@@ -222,30 +258,42 @@
     "1. Une première version en utilisant la boucle *for*\n",
     "2. Une seconde version en utilisant la boucle *while*"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+   "execution_count": 3,
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-d95b5a2ab4fe>, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-d95b5a2ab4fe>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    **Exercice 8:**\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
-   },
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Donner un nombre dont on va calculer la factorielle\"))\n",
+    "f = 1\n",
+    "for i in range(2,n + 1):\n",
+    "    f *= i\n",
+    "print(f)"
+   ]
+  },
+  {
    "source": [
     "---\n",
     "\n",
@@ -265,26 +313,36 @@
     "\n",
     "Le jour de naissance est la somme des premiers nombres dans les ensembles où le jour apparaît. Par exemple,\n",
     "si le jour de naissance est 19, il apparaît dans Set 1, Set 2 et Set 5. Les premiers chiffres de ces trois ensembles sont 1, 2 et 16. Leur somme est 19."
-   ]
-  },
-  {
+   ],
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "source": [
+    "date = 0\n",
+    "for i in range (1,6):\n",
+    "    print(\"Est-ce que votre jour de naissance est dans l'esnemble\",i,\"Reponse oui/non.\")\n",
+    "    reponse = input( )\n",
+    "    if reponse == \"oui\":\n",
+    "        date += 2 ** (i-1)\n",
+    "print(\"Votre jour de naissance est le\",date)"
+   ],
+   "cell_type": "code",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
+  },
+  {
    "source": [
     "**Excercice 10:**\n",
     "\n",
@@ -294,7 +352,13 @@
     "* Sinon, si un chiffre dans l'entrée de l'utilisateur correspond à un chiffre dans le numéro de loterie, la récompense est de 1 000€.\n",
     "\n",
     "**Astuce :** Utiliser la fonction **random.randint(0, 99)** pour génèrer de manière aléatoire un nombre à deux chiffres. Cette fonction doit être accompagné par **import random** comme première instruction dans le code."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -311,7 +375,7 @@
    "source": [
     "**Exercice 11:**\n",
     "    \n",
-    "Ecrire un programme qui permet de calculer la somme des chiffres d'un entier *n* donné. Le nombre *n* doit être compris entre 10 et 20 (bornes incluses)."
+    "Ecrire un programme qui permet de calculer la somme des chiffres d'un entier *n* donné. Le nombre *n* doit être compris entre 10 et 99 (bornes incluses)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -321,7 +385,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"Entrez un nombre entre 10 et 99\"))\n"
+   ]
   },
   {
    "source": [
@@ -364,13 +430,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Il y a 7 mots dans la phrase\n"
+     ]
+    }
+   ],
    "source": [
-    " "
+    " phrase = input(\"Rentrez une phrase\")\n",
+    " nombre_mot = 1\n",
+    " for lettre in phrase :\n",
+    "     if lettre == \" \":\n",
+    "         nombre_mot += 1\n",
+    "print(\"Il y a\",nombre_mot,\"mots dans la phrase\")\n"
    ]
   },
   {
@@ -575,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
